Django/django-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: django-pod
